--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  IMAGE_NAME: jiolloker/mega123
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build-and-push:
@@ -16,12 +16,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: false
-          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+        env:
+          $(cat .env)
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --tag $IMAGE_NAME:$IMAGE_TAG \
+            --push .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -30,8 +36,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+        env:
+          $(cat .env)
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --tag $IMAGE_NAME:$IMAGE_TAG \
+            --push .
