--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,16 +3,16 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
-
-env:
-  IMAGE_TAG: ${{ github.sha }}
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Load environment variables
+        run: echo $(cat .env | xargs) > .env
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build Docker image
         env:
-          $(cat .env)
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
           docker buildx build \
@@ -37,7 +37,7 @@ jobs:
 
       - name: Push Docker image
         env:
-          $(cat .env)
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
           docker buildx build \
